# Customer_Price_Sending

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY_V2.md  INSTRUCTIONS.txt  Python Code.docx  README.md  README.txt  README_v2.md  commitlint.config.js  create_drafts_enhanced.py  dashboard.py  dashboard_v2.py  email_templates.json  manage_templates.py  migrate_excel_to_json_v2.py  pyproject.toml  requirements.txt  run_customer_system_v2.bat  run_dashboard.vbs  test_dashboard_fixes.py  test_excel_free.py
.agent/: README.md
.agent/sops/: adding-feature.md  database-changes.md  deployment.md  running-tests.md
.agent/system/: api-endpoints.md  architecture.md  database-schema.md  tech-stack.md
.claude/: settings.local.json
.claude/commands/: update-doc.md
.github/workflows/: ci.yml  release.yml
Archive/: check_columns_backup.py  create_drafts_backup.py  diagnose_excel_backup.py  run_price_sender.vbs
Archive/development_tests/: test_com_fix.py  test_dashboard_integration.py
Archive/legacy_launchers/: run_customer_system.bat  run_dashboard_v1.vbs  run_dashboard_v3.vbs  run_enhanced_price_sender.vbs
Archive/unused_web_interface/static/: styles.css
Archive/unused_web_interface/templates/: index.html
Archive/v0.3.1_backup/: dashboard.py  requirements.txt  run_dashboard.vbs
Archive/v0.3.1_backup/src/: __init__.py  email_generator.py  main.py
config/: app_settings.json
data/: Jason_Najm_250427.html  Mark_Anderson_231123.html  customer_database.json
monthly_drafts/: 2025_09.txt  2025_10.txt  dashboard_template.json
scripts/: bump_version.bat  bump_version.sh
src/: __init__.py  audit_logging.py  email_generator.py  verification_system.py
tests/: test_dashboard_playwright.py  test_main.py  test_verification_system.py
